<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="title_activity_home">MMT planner</string>
    <string name="title_activity_login">@string/app_name</string>
    <string name="title_activity_pin_location">Pin location</string>
    <string name="title_activity_search_routes">Search routes</string>
    <string name="title_activity_route_list">Routes list</string>
    <string name="title_activity_route">Route</string>
    <string name="title_activity_finish_route">Finished route data</string>
    <string name="title_activity_language">Languages</string>
    <string name="title_activity_show_poi">Point of Interest</string>
    <string name="title_activity_create_poi">Create POI</string>
    <string name="title_activity_disclaimer">Disclaimer</string>

    <string name="point_of_interest">Point of\nInterest</string>
    <string name="route">Route</string>
    <string name="list_of_routes">Routes list</string>
    <string name="routes_on_map">Routes on map</string>
    <string name="route_map">Route map</string>
    <string name="route_info">Route info</string>
    <string name="action_settings">Settings</string>
    <string name="close">Close</string>
    <string name="play_services_error">Google Play services are not available.  This application
        will close.</string>
    <string name="current_language">Current language:</string>
    <string name="change_language">Change language</string>
    <string name="log_out">Log out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Login with social networks</string>
    <string name="choose_start_point">Choose starting point...</string>
    <string name="choose_desti_point">Choose destination...</string>
    <string name="radius">Radius</string>
    <string name="only_my_routes">Only my routes</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="go">Go</string>
    <string name="stop">Stop</string>
    <string name="google_api_unavailable">Google API Unavailable</string>
    <string name="login_error">Login error</string>
    <string name="any_address">Any address</string>
    <string name="failed_to_load_track">Failed to load route</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="saved_activity_stats">Route has been saved!</string>
    <string name="delete_activity_stats">Route has been deleted!</string>
    <string name="saved_raiting">Rating has been saved!</string>
    <string name="weather">Suitable weather</string>
    <string name="description">Description</string>
    <string name="recorded">Saved</string>
    <string name="viewed">Viewed</string>
    <string name="navigated">Navigated</string>
    <string name="complexity">Complexity</string>
    <string name="traffic">Traffic</string>
    <string name="Quick">Quick</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="rate">Please rate the route</string>
    <string name="notreached">You have reached destination</string>
    <string name="reached">Destination reached!</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="input">Enter your description here</string>
    <string name="movement">Choose your means of transport</string>
    <string name="curmovement">Your current means of transport</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cp_1_after">In</string>
    <string name="cp_2_change">meters, your means of transport will change.</string>
    <string name="be_ready">Be ready to change means of transport in 5 minutes.</string>
    <string name="movement_type_change">Means of transport change</string>
    <string name="dont_show_again">Do not show again</string>
    <string name="select_start_or_destination">Please select at least the starting point or the destination</string>
    <string name="overwrite_movement_type">Overwrite last means of transport?</string>
    <string name="overwrite_movement_type_message">Location has not changed from the last time you
        changed means of transport. Do you want to overwrite it and its comment?</string>
    <string name="server_error">Connection error. Please try again later.</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="invalid_start_coord">Invalid starting point coordinates!</string>
    <string name="invalid_start_address">Invalid starting point address!</string>
    <string name="invalid_desti_coord">Invalid destination coordinates!</string>
    <string name="invalid_desti_address">Invalid destination address!</string>
    <string name="log_in">Log in</string>
    <string name="delete_local_files">Delete all local routes?</string>
    <string name="delete_local_files_message">You have some files that have not been uploaded to
        server. Are you sure you want to delete all local routes?</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="walk">Walk</string>
    <string name="bike">Bike</string>
    <string name="underground">Metro</string>
    <string name="poi_text_empty">Please insert a name of the pinned POI</string>
    <string name="report_saved">POI saved</string>
    <string name="report_not_saved">Error! Can not save POI</string>
    <string name="poi_name">POI name</string>
    <string name="poi_name_input">Type the name here</string>
    <string name="movement_type">Means of transport</string>
    <string name="select_layers">Select layers</string>
    <string name="your_journeys">Your journeys</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="no_routes_uploaded">You have no routes uploaded to server</string>
    <string name="add_rate">Add rating</string>
    <string name="rate_button">Rate</string>
    <string name="discard_button">Discard</string>
    <string name="agree">Agree</string>
    <string name="track_cloud">The route is not yet saved in the cloud</string>
    <string name="sdown">Scroll\ndown</string>
    <string name="delete_user">User content deleted!</string>
    <string name="delete_user_title">Delete all user content?</string>
    <string name="delete_user_content">Do you wish to delete all content regarding you?</string>
    <string name="title_delete_user_content">Delete user content</string>
    <string name="verification">Verified!</string>
    <string name="route_info_is_public">Public route</string>
    <string name="route_updated">Route updated</string>
    <string name="verify">Verify</string>
    <string name="verified_by">Verified by</string>
    <string name="poi_deleted">POI has been deleted!</string>
    <string name="poi_delete_only_owner">This POI can only be deleted by its owner</string>
    <string name="poi_description_input">Type the description here</string>
    <string name="layer_poi_name">POIs collected from Issy "This way" app</string>
    <string name="layer_routes_name">Routes collected from Issy "This way" app</string>
    <string name="category_type">Category type</string>


    <string name="parking">Parking</string>
    <string name="train_tram_metro">Train/Tramway/Metro stations</string>
    <string name="bus_station">Bus stations</string>
    <string name="car_station">Carpooling stations</string>
    <string name="taxi">Taxi</string>
    <string name="electric">Recharge areas for electric cars</string>




</resources>