<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>

    <fragment
        android:id="@+id/route_recorder"
        android:name="com.library.routerecorder.RouteRecorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tool_bar"/>

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_below="@id/tool_bar"
        android:layout_marginRight="-15dp"
        android:layout_marginTop="45dp"
        android:gravity="center">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            app:backgroundTint="#cc3300"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="100dp"
            android:text="@string/stop"
            android:textColor="#ffffff"/>
    </RelativeLayout>

    <!--<RelativeLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:gravity="center"-->
    <!--android:layout_marginRight="5dp"-->
    <!--android:layout_alignParentTop="false"-->
    <!--android:layout_marginBottom="20dp">-->
    <!--<Button-->
    <!--android:id="@+id/tf_1"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:text="@string/icon_filter"-->
    <!--android:textColor="#000000"-->
    <!--android:textSize="25dp"-->
    <!--android:background="#00FFFFFF"/>-->

    <!--</RelativeLayout>-->

    <FrameLayout
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="false"
        android:background="#B3CCCCCC"
        android:clickable="true"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:background="@color/text_primary"
            android:visibility="visible">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonss">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:weightSum="3.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="18dp"
                        android:text="@string/reached" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notreached"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="left"
                            android:layout_marginBottom="20dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:gravity="left"
                                android:text="@string/complexity"
                                android:textColor="@color/text_secondary"
                                android:textSize="16dp"/>

                            <RatingBar
                                android:id="@+id/rtbProductRating"
                                style="?android:attr/ratingBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:isIndicator="false"
                                android:numStars="5"
                                android:progressTint="@color/color_register"
                                android:rating="3.0"
                                android:stepSize="1.0"


                                android:scaleX="0.5"
                                android:scaleY="0.5"/>
                        </LinearLayout>

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="20dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center_horizontal"

                                android:text="@string/traffic"
                                android:textColor="@color/text_secondary"
                                android:textSize="16dp"/>

                            <RatingBar
                                android:id="@+id/rtb"
                                style="?android:attr/ratingBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:isIndicator="false"
                                android:numStars="5"
                                android:progressTint="@color/color_register"
                                android:rating="3.0"
                                android:stepSize="1.0"


                                android:scaleX="0.5"
                                android:scaleY="0.5"/>
                        </LinearLayout>

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="1.0">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:gravity="right"
                                android:text="@string/Quick"
                                android:textColor="@color/text_secondary"
                                android:textSize="16dp"/>

                            <RatingBar
                                android:id="@+id/ProductRating"
                                style="?android:attr/ratingBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:isIndicator="false"
                                android:numStars="5"
                                android:progressTint="@color/color_register"
                                android:rating="3.0"
                                android:stepSize="1.0"


                                android:scaleX="0.5"
                                android:scaleY="0.5"/>
                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:autoText="true"
                    android:background="@color/colorTabsScroll"
                    android:text="@string/ok"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/skip_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#CCCCCC"
                        android:onClick="onClicks"
                        android:text="@string/skip"/>
                </FrameLayout>
            </LinearLayout>

        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:id="@+id/frameLayout"
        android:visibility="gone"
        android:background="@color/black_translucent" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</RelativeLayout>
